# justpen-browser-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: guard-pyproject.py
.claude/rules/: code-intelligence.md  lint-typing.md  release-process.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml
docs/: .gitignore  astro.config.mjs  index.md
docs/client-setup/: claude-code.md  copilot-cli.md  gemini-cli.md
docs/concepts/: contexts-isolation.md  instances-isolation.md  modal-state.md  refs-snapshots.md  response-envelope.md
docs/contributing/: code-intelligence.md  lint-typing.md  pr-checklist.md  release-process.md
docs/getting-started/: configuration.md  install.md  run-server.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/client-setup/: claude-code.md  copilot-cli.md  gemini-cli.md
docs/src/content/docs/concepts/: instances-isolation.md  modal-state.md  refs-snapshots.md  response-envelope.md
docs/src/content/docs/contributing/: getting-started.md  lint-typing.md  pr-checklist.md
docs/src/content/docs/getting-started/: configuration.md  install.md  run-server.md
docs/src/content/docs/tools-reference/: code-execution.md  cookies.md  inspection.md  interaction.md  lifecycle.md  mouse.md  navigation.md  page.md  utility.md  verification.md
docs/src/styles/: custom.css
docs/tools-reference/: code-execution.md  cookies.md  inspection.md  interaction.md  lifecycle.md  mouse.md  navigation.md  page.md  server-tools.md  utility.md  verification.md
scripts/hooks/: check_conventional_commit.py
src/justpen_browser_mcp/: __init__.py  __main__.py  _playwright_internal.py  app.py  camoufox.py  coercion.py  config.py  context_manager.py  errors.py  instance.py  instance_manager.py  ref_resolver.py  responses.py
src/justpen_browser_mcp/tools/: __init__.py  code_execution.py  cookies.py  inspection.py  interaction.py  lifecycle.py  mouse.py  navigation.py  page.py  server_tools.py  utility.py  verification.py
tests/: conftest.py  test_camoufox.py  test_coercion.py  test_config.py  test_context_manager.py  test_e2e.py  test_errors.py  test_instance.py  test_instance_manager.py  test_ref_resolver.py  test_responses.py
tests/e2e/: test_multi_instance.py
tests/tools/: conftest.py  test_code_execution.py  test_cookies.py  test_inspection.py  test_interaction.py  test_lifecycle.py  test_mouse.py  test_navigation.py  test_page.py  test_server_tools.py  test_utility.py  test_verification.py
